@@ -1,0 +1,79 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      lang="en"
+      metal:use-macro="here/main_template/macros/master"
+      i18n:domain="plone">
+
+<body>
+
+  <div metal:fill-slot="content-core">
+    <metal:block define-macro="content-core"
+                 tal:define="kssClassesView context/@@kss_field_decorator_view;
+                             getKssClasses nocall:kssClassesView/getKssClassesInlineEditable;
+                             templateId template/getId">
+
+        <metal:listingmacro define-macro="listing">
+        <tal:results define="b_start python:request.get('b_start', 0);
+                             batch python:context.results(b_start=b_start, batch=True, b_size=20);
+                             site_properties context/portal_properties/site_properties;
+                             use_view_action site_properties/typesUseViewActionInListings|python:();
+                             isAnon context/@@plone_portal_state/anonymous;
+                             normalizeString nocall: context/plone_utils/normalizeString;
+                             toLocalizedTime nocall: context/@@plone/toLocalizedTime;
+                             show_about python:not isAnon or site_properties.allowAnonymousViewAbout;
+                             navigation_root_url context/@@plone_portal_state/navigation_root_url;
+                             pas_member context/@@pas_member;">
+        <tal:listing condition="batch">
+          <table class="cciaa_topic_view">
+            <tbody>
+              <tal:block tal:repeat="item batch">
+                <tr>
+                  <td class="center" tal:define="item_object item/getObject">
+                    <tal:hasImage condition="exists:item_object/image_thumb">
+                      <img src="" alt="" tal:replace="structure python: path('nocall:item_object/tag')(scale='thumb', css_class='tImage')" />
+                    </tal:hasImage>
+                      <tal:noImage condition="not:exists:item_object/image_thumb">
+                        <img tal:attributes="src string:${context/portal_url}/++resource++cciaa.topic_view.images/news.png" alt="Logo novitÃ " title="NovitÃ "/>
+                    </tal:noImage>
+                  </td>
+                  <td>
+                    <a href="" tal:attributes="href item/getURL">
+                      <span class="title_item" tal:content="item/Title"/>
+                    </a>
+                    <div tal:content="item/Description">
+                      Elemento
+                    </div>
+                  </td>
+                </tr>
+              </tal:block>
+            </tbody>
+          </table>
+          <div metal:use-macro="context/batch_macros/macros/navigation" />
+        </tal:listing>
+        <metal:empty metal:define-slot="no_items_in_listing">
+            <p class="discreet"
+               tal:condition="not: batch"
+               i18n:translate="description_no_items_in_folder">
+                There are currently no items in this folder.
+            </p>
+        </metal:empty>
+
+        </tal:results>
+        </metal:listingmacro>
+        <div metal:define-macro="text-field-view"
+             id="parent-fieldname-text" class="stx"
+             tal:define="kss_class python:getKssClasses('text',
+                         templateId=templateId, macro='text-field-view');
+                         has_text exists:context/aq_explicit/getText;
+                         text python:has_text and here.getText() or ''"
+             tal:condition="text"
+             tal:attributes="class python:context.Format() in ('text/structured', 'text/x-rst', ) and 'stx' + kss_class or 'plain' + kss_class">
+            <div metal:define-slot="inside" tal:replace="structure text">The body</div>
+        </div>
+    </metal:block>
+  </div>
+
+</body>
+</html>
