@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+ <object name="Folder" meta_type="Factory-based Type Information"
+    xmlns:i18n="http://xml.zope.org/namespaces/i18n" purge="False">
+    <property name="view_methods" purge="False">
+         <element value="cciaa_collection_view"/>
+     </property>
+ </object>
